--- a/saleapp/app/templates/index.html
+++ b/saleapp/app/templates/index.html
@@ -1,38 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Trang chu</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet"/>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-</head>
-<body>
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">BÁN HÀNG TRỰC TUYẾN</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Trang chủ</a>
-                </li>
-                {% for cate in categories %}
-                <li class="nav-item">
-                    <a class="nav-link" href="/?category_id={{cate.id}}">{{ cate.name }}</a>
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
-    </div>
-</nav>
+{% extends 'layout/base.html' %}
 
-<div class="container">
+{% block content %}
+
+    {% if products %}
     <div class="row">
         {% for p in products %}
         <div class="col-md-3 col-sm-12" style="padding:1rem;">
@@ -41,13 +11,15 @@
                 <div class="card-body">
                     <h4 class="card-title">{{ p.name }}</h4>
                     <p class="card-text">{{ "{:,.1f}".format(p.price) }} VNĐ</p>
-                    <a href="#" class="btn btn-primary">Xem chi tiết</a>
+                    <a href="/products/{{ p.id }}" class="btn btn-primary">Xem chi tiết</a>
+                    <a href="#" class="btn btn-danger">Đặt hàng</a>
                 </div>
             </div>
         </div>
         {% endfor %}
     </div>
-</div>
+    {% else %}
+    <p class="text-danger">Không có sản phẩm nào!</p>
+    {% endif %}
 
-</body>
-</html>
+{% endblock %}
