--- a/saleapp/app/templates/details.html
+++ b/saleapp/app/templates/details.html
@@ -1,7 +1,7 @@
 {% extends 'layout/base.html' %}
 
 {% block content %}
-  <h1 class="text-center text-info">CHI TIẾT SẢN PHẨM</h1>
+  <h1 class="text-center text-success">CHI TIẾT SẢN PHẨM</h1>
   <div class="row">
     <div class="col-md-4 col-sm-6">
       <img src="{{ product.image }}" class="img-fluid" alt="{{ product.name }}" />
