update login client

--- a/saleapp/app/templates/details.html
+++ b/saleapp/app/templates/details.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-md-8 col-sm-6">
       <h1>{{ product.name }}</h1>
-      <p>{{ product.description }}</p>
+      <p>{{ product.description|safe }}</p>
       <h3 class="text-danger">{{ "{:,.1f}".format(product.price) }} VNĐ</h3>
     </div>
   </div>
