--- a/saleappv2/app/templates/admin/index.html
+++ b/saleappv2/app/templates/admin/index.html
@@ -6,7 +6,7 @@
 <h1 class="text-center text-info">TRANG CHỦ QUẢN TRỊ</h1>
 <h3>Chào mừng <span>{{ current_user.name }}</span>!!!</h3>
 {% else %}
-<h1>ĐĂNH NHẬP QUẢN TRỊ</h1>
+<h1 class="text-center text-success">ĐĂNG NHẬP QUẢN TRỊ</h1>
 <form method="post" action="/login-admin">
     <div class="mb-3 mt-3">
         <label for="username" class="form-label">Tên đăng nhập:</label>
