--- a/saleappv2/app/templates/layout/header.html
+++ b/saleappv2/app/templates/layout/header.html
@@ -14,6 +14,27 @@
                     <a class="nav-link" href="/?category_id={{ cate.id }}">{{ cate.name }}</a>
                 </li>
                 {% endfor %}
+
+                {% if current_user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link text-success" href="/">
+                        <img width="40" class="rounded-circle" src="{{ current_user.avatar }}" alt="{{ current_user.name }}" />
+                        Chào {{ current_user.name }}!
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-danger" href="/logout">Đăng xuất</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link text-success" href="/login">Đăng nhập</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-danger" href="/register">Đăng ký</a>
+                </li>
+                {% endif %}
+
+
             </ul>
             <form class="d-flex" action="/">
                 <input class="form-control me-2" name="keyword" type="text" placeholder="Nhập từ khóa...">
