--- a/saleapp/app/templates/index.html
+++ b/saleapp/app/templates/index.html
@@ -12,7 +12,7 @@
                     <h4 class="card-title">{{ p.name }}</h4>
                     <p class="card-text">{{ "{:,.1f}".format(p.price) }} VNĐ</p>
                     <a href="/products/{{ p.id }}" class="btn btn-primary">Xem chi tiết</a>
-                    <a href="#" class="btn btn-danger">Đặt hàng</a>
+                    <a href="javascript:;" onclick="addToCart({{p.id}}, '{{p.name}}', {{p.price}})" class="btn btn-danger">Đặt hàng</a>
                 </div>
             </div>
         </div>
