--- a/saleapp/app/templates/login.html
+++ b/saleapp/app/templates/login.html
@@ -9,7 +9,7 @@
 </div>
 {% endif %}
 
-<form method="post" action="/login">
+<form method="post" action="">
 
 
 <div class="form-floating mb-3 mt-3">
