--- a/saleappv2/app/templates/cart.html
+++ b/saleappv2/app/templates/cart.html
@@ -13,27 +13,31 @@
         <th></th>
     </tr>
     {% for c in session['cart'].values() %}
-    <tr>
+    <tr id="cart{{ c.id }}">
         <td>{{ c.id }}</td>
         <td>{{ c.name }}</td>
-        <td>{{ "{:,.1f}".format(c.price) }} VNĐ</td>
+        <td>{{ "{:,.0f}".format(c.price) }} VNĐ</td>
         <td>
-            <input type="number" value="{{ c.quantity }}" class="form-control"/>
+            <input type="number" onblur="updateCart({{ c.id }}, this)" value="{{ c.quantity }}" class="form-control"/>
         </td>
         <td>
-            <input type="button" value="Xóa" class="btn btn-danger"/>
+            <input type="button" value="Xóa" onclick="deleteCart({{ c.id }})" class="btn btn-danger"/>
         </td>
     </tr>
     {% endfor %}
 </table>
 
 <div class="alert alert-info">
-    <h3>Tổng sản phẩm: {{ cart.total_quantity }}</h3>
-    <h3>Tổng tiền: {{ "{:,.1f}".format(cart.total_amount) }} VNĐ</h3>
+    <h3>Tổng sản phẩm: <span class="cart-counter">{{ cart.total_quantity }}</span></h3>
+    <h3>Tổng tiền: <span class="cart-amount">{{ "{:,.0f}".format(cart.total_amount) }}</span> VNĐ</h3>
 </div>
 
 <div>
-    <input type="button" value="Thanh toán" class="btn btn-success" />
+    {% if current_user.is_authenticated %}
+    <input type="button" onclick="pay()" value="Thanh toán" class="btn btn-success" />
+    {% else %}
+    <p>Vui lòng <a href="/login?next=/cart">đăng nhập</a> để thanh toán!</p>
+    {% endif %}
 </div>
 {% else %}
 <p>Giỏ không có hàng!</p>
