--- a/saleappv2/app/templates/login.html
+++ b/saleappv2/app/templates/login.html
@@ -9,7 +9,7 @@
 </div>
 {% endif %}
 
-<form method="post" action="/login">
+<form method="post">
 
     <div class="form-floating mb-3 mt-3">
         <input type="text" class="form-control" required id="username" placeholder="Nhập tên đăng nhập" name="username">
