--- a/saleapp/app/templates/admin/stats.html
+++ b/saleapp/app/templates/admin/stats.html
@@ -2,4 +2,57 @@
 
 {% block body %}
 <h1 class="text-center text-info">THÔNG KÊ, BÁO CÁO</h1>
+
+<div class="row">
+    <div class="col-md-5 col-sm-12">
+        <table class="table">
+            <tr>
+                <th>Id</th>
+                <th>Tên sản phẩm</th>
+                <th>Doanh thu</th>
+            </tr>
+            {% for s in stats %}
+            <tr>
+                <td>{{ s[0] }}</td>
+                <td>{{ s[1] }}</td>
+                <td>{{ "{:,.0f}".format(s[2]) }} VNĐ</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+    <div class="col-md-7 col-sm-12">
+         <form>
+            <div class="form-group">
+                <input type="text" class="form-control" name="kw" placeholder="Nhập từ khóa..." />
+            </div>
+            <div class="form-group">
+                <label>Từ ngày</label>
+                <input type="date" class="form-control" name="from_date" />
+            </div>
+             <div class="form-group">
+                <label>Đến ngày</label>
+                <input type="date" class="form-control" name="to_date" />
+            </div>
+            <div>
+                <input type="submit" value="Lọc dữ liệu" class="btn btn-info" />
+            </div>
+        </form>
+        <canvas id="revenueChart"></canvas>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="{{ url_for('static', filename='js/my-stats.js') }}"></script>
+<script>
+    let labels = []
+    let data = []
+    {% for s in stats %}
+        labels.push('{{s[1]}}')
+        data.push({{s[2]}})
+    {% endfor %}
+
+    window.onload = function() {
+        revenueChart(labels, data)
+    }
+</script>
 {% endblock %}
